Bug fixes in location, target groups and question management

--- a/WebContent/css/select.css
+++ b/WebContent/css/select.css
@@ -368,3 +368,7 @@ body > .ui-select-bootstrap.open {
 .ui-select-refreshing.ng-animate {
   -webkit-animation: none 0s;
 } 
+
+.label-padding {
+	padding-top : 1%;
+}
